# wisent-compute

./: .gitignore  README.md  install.sh  pyproject.toml
.github/workflows/: bake-agent-image.yml  deploy-coordinator-mac-mini.yml  deploy.yml  pypi-publish.yml  registry-bootstrap.yml
config/: quotas.json
deploy/: MIGRATE_TO_STADO.md  auto_deploy_tick.sh  bake_agent_image.sh  gcp_setup.sh  gcs_copy_adc.py  host-health-beacon.service  host-health-beacon.timer  host_health_beacon.sh  host_health_beacon_macos.sh  install_github_runner.sh  install_macos_coordinator.sh  migrate_to_stado.sh  redeploy_function.sh  stado-up.sh
deploy/azure/: env.example
deploy/hf-refresh-fn/: package.json
desktop/StadoDesktop/: Package.swift
desktop/StadoDesktop/Resources/: Info.plist
desktop/StadoDesktop/scripts/: build-app.sh  bundle.sh
docs/: architecture.md  cli.md  configuration.md  operations.md
scripts/: azure_import_smoke.py  box_import_smoke.py  notify_local_compare.sh  watch_job.sh
skills/stado/: SKILL.md
stado/: __main__.py  cli.py  config.py  config_file.py  constants.py  coordinator.py  dashboard.py  machine.py  models.py
stado/artifacts/: __init__.py  models.py  registry.py  validation.py
stado/artifacts/adapters/: __init__.py  activations.py  base.py
stado/cloud_function/: main.py
stado/coverage/: __init__.py  cli.py
stado/dashboard_summary/: __init__.py  status_view.py  web_view.py
stado/deploy/: bootstrap.py  host_health_beacon.sh  host_recovery.py  local_install.py  pre_start_cleanup.sh
stado/deploy/templates/: wisent-agent.service.tmpl  wisent-host-health.service.tmpl  wisent-host-health.timer.tmpl  wisent-upgrade.service.tmpl
stado/deploy/watchdog/: cli.py
stado/failure_fixer/: __init__.py  cli.py
stado/mcp/: __init__.py  server.py
stado/monitor/: billing.py  host_health.py  monitor.py
stado/monitor/reap/: helpers.py  run_reaper.py
stado/profiles/: __init__.py  ai_toolkit_zimage.json
stado/providers/: __init__.py  aws.py  base.py  local_agent.py
stado/providers/azure_helpers/: network.py
stado/providers/box/: __init__.py  _http.py  _types.py  client.py
stado/providers/gcp/: __init__.py
stado/providers/local/: gcp_self.py  hf_rate.py  slots.py  version_check.py
stado/providers/vast/: __init__.py  _auth.py
stado/queue/: __init__.py  azure_blob.py  capacity.py  storage.py  submit.py
stado/queue/leases/: __init__.py
stado/queue/runs/: __init__.py
stado/queue/tracking/: __init__.py  tombstone.py
stado/scheduler/: cost.py  quota.py  scheduler.py
stado/scheduler/dispatch/: agent.py  quota_request.py  quota_skus.py
stado/scheduler/makespan/: __init__.py
stado/schedules/: model.py
stado/sizing/: __init__.py
stado/targets/: __init__.py  capabilities.py  registry.example.json  registry.json  validation.py
stado/templates/: startup_cpu.sh  startup_gpu.sh  startup_gpu_agent.sh  startup_gpu_agent_azure.sh
tests/: test_config_file.py  test_dashboard_cleanup.py  test_disk_cleanup.py  test_local_install.py  test_machine.py  test_pinned_host.py  test_targets_routing.py
wisent_compute/: cli.py  config.py  coordinator.py  dashboard.py  models.py  ram_sizing.py
wisent_compute/_catalog/: gpu_sku.py
wisent_compute/cloud_function/: main.py  requirements.txt
wisent_compute/coverage/: __init__.py  failures.py
wisent_compute/dashboard_summary/: __init__.py  status_view.py  web_view.py
wisent_compute/deploy/: bootstrap.py  local_install.py  pre_start_cleanup.sh
wisent_compute/deploy/templates/: wisent-agent.service.tmpl  wisent-host-health.service.tmpl  wisent-upgrade.service.tmpl  wisent-upgrade.timer.tmpl
wisent_compute/deploy/watchdog/: __init__.py  cli.py
wisent_compute/failure_fixer/: __init__.py  cli.py
wisent_compute/monitor/: __init__.py  alerts.py  billing.py  heartbeat_guard.py  monitor.py
wisent_compute/monitor/reap/: helpers.py
wisent_compute/profiles/: __init__.py  ai_toolkit_zimage.json
wisent_compute/providers/: __init__.py  aws.py  azure.py  base.py  gcp.py  local_agent.py
wisent_compute/providers/gcp/: __init__.py  stockout.py
wisent_compute/providers/local/: admission.py  external.py  fleet_flush.py  hf_rate.py  resource_scope.py  slots.py  telemetry.py  version_check.py
wisent_compute/providers/vast/: __init__.py  _auth.py
wisent_compute/queue/: azure_blob.py  capacity.py  migrations.py  storage.py  submit.py
wisent_compute/queue/listing/: __init__.py
wisent_compute/queue/runs/: __init__.py
wisent_compute/scheduler/: __init__.py  cost.py  quota.py  scheduler.py  skip_done.py
wisent_compute/scheduler/dispatch/: agent.py  quota_replies.py  quota_request.py  quota_skus.py
wisent_compute/scheduler/makespan/: __init__.py  _history.py
wisent_compute/schedules/: __init__.py  fire.py  model.py  store.py
wisent_compute/sizing/: __init__.py
wisent_compute/targets/: __init__.py  registry.example.json  registry.json  validation.py
wisent_compute/templates/: startup_cpu.sh  startup_gpu.sh  startup_gpu_agent.sh  startup_gpu_agent_azure.sh
(+35 files in other folders)
