[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wisent-compute"
version = "0.4.293"
description = "Job queue and compute management for Wisent GPU workloads"
requires-python = ">=3.10"
dependencies = [
    "google-cloud-storage>=2.18.0",
    "google-cloud-compute>=1.19.0",
    "google-cloud-pubsub>=2.21.0",
    "google-cloud-secret-manager>=2.20.0",
    # Cloud Quotas API client — backs `wc quota request <accel> --to N`
    # via CreateQuotaPreference/UpdateQuotaPreference. quota.py keeps
    # using google-cloud-compute's RegionsClient for the read-side
    # regional quota fetch; this dep is the WRITE side (preference
    # submission). Cloud Function deploy already pulls it on the next
    # cold start once this dep lands in the deployed PyPI release.
    "google-cloud-quotas>=0.1.0",
    "click>=8.0",
]

[project.optional-dependencies]
aws = ["boto3>=1.34.0"]
azure = [
    "azure-identity>=1.15.0",
    "azure-mgmt-compute>=30.0.0",
    "azure-mgmt-network>=25.0.0",
    "azure-mgmt-resource>=23.0.0",
    "azure-storage-blob>=12.19.0",
    # Microsoft.Quota provider — backs the Azure side of
    # `wc quota request` (Quota.begin_create_or_update). Same optional
    # gating pattern as scheduler.quota._fetch_quotas_azure: imported
    # inside the call site so the GCP-only deployment doesn't have to
    # carry the Azure SDK.
    "azure-mgmt-quota>=1.1.0",
]
dev = ["functions-framework>=3.0.0"]

[project.scripts]
wc = "wisent_compute.cli:main"
wc-coverage = "wisent_compute.coverage.cli:main"
wc-fix = "wisent_compute.failure_fixer.cli:main"

[tool.setuptools.packages.find]
include = ["wisent_compute*"]

[tool.setuptools.package-data]
wisent_compute = ["templates/*.sh", "targets/*.json", "deploy/templates/*.tmpl", "deploy/*.sh", "profiles/*.json", "deploy/pre_start_cleanup.sh"]
